# PocketOps

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.agent/rules/: rust-async.md  rust-error-handling.md  rust-fundamentals-ownership.md  rust-perfomance.md
config/ai/: gemini.json  ollama.json  openai.json
scripts/: entrypoint.sh  setup_ssh.sh
src/: core.rs  executor.rs  main.rs  models.rs
src/ai/: client.rs  config.rs  mod.rs  models.rs  traits.rs
src/ai/providers/: gemini.rs  mod.rs  ollama.rs  openai.rs
src/core/: discovery.rs  dispatcher.rs  mod.rs  server_manager.rs  session.rs
src/db/: mod.rs
src/executor/: ssh.rs
src/handlers/: telegram.rs
src/models/: command.rs  mod.rs
templates/messages/: explain.html
templates/prompts/: server_assistant.html  ssh_reminder.txt
