[package]
name = "pocket-sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ssh2 = "0.9"

reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
teloxide = "0.17.0"
